<resources>
    <string name="app_name">Chowmein_Order</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_topping">Choose Topping</string>
    <string name="egg_chowmein">Egg </string>
    <string name="chicken_chowmein">Chicken </string>
    <string name="veg_chowmein">Veg </string>
    <string name="buff_chowmein">Buff </string>
    <string name="one_plate">1 Plate</string>
    <string name="two_plate">2 Plates</string>
    <string name="subtotal">Subtotal: Rs%s</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="chicken">Chicken</string>
    <string name="egg">Egg</string>
    <string name="buff">Buff</string>
    <string name="veg">Veg</string>
    <string name="fullPlate">Full Plate</string>
    <string name="halfPlate">Half Plate</string>

    <string name="send_Order">Send Order To Another App</string>

    <string name="order_details">Topping: %1$s \nNumber of Plates: %2$s \nEach Plate: %3$s \nPickup Date: %4$s \nTotal: %5$s \n\n Thank you! </string>
    <string name="Chowmein_order">%1$s Chowmein Order!</string>

    <string name="rs_format">Rs %s</string>
</resources>