<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.chowmein_order.model.OrderViewModel" />
        <variable
            name="platesQuantityFragment"
            type="com.example.chowmein_order.PlatesQuantityFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlatesQuantityFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/platesQuantityOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/fullPlate"
                    android:text="@string/fullPlate"
                    android:checked="@{viewModel.platesQuantity.equals(@string/fullPlate)}"
                    android:onClick="@{() -> viewModel.setPlatesQuantity(@string/fullPlate)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/halfPlate"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.platesQuantity.equals(@string/halfPlate)}"
                    android:onClick="@{() -> viewModel.setPlatesQuantity(@string/halfPlate)}"
                    android:layout_height="wrap_content"
                    android:text="@string/halfPlate" />


            </RadioGroup>

            <view
                class="com.google.android.material.divider.MaterialDivider"
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/platesQuantityOptions"
                android:layout_marginTop="@dimen/margin_between_elements" />


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="wrap_content"
                android:onClick="@{() -> platesQuantityFragment.cancelOrder()}"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> platesQuantityFragment.goToNextFragment()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>


