<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.chowmein_order.model.OrderViewModel" />
        <variable
            name="platesFragment"
            type="com.example.chowmein_order.PlatesFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlatesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">

            <RadioGroup
                android:id="@+id/platesOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/onePlate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.plates.equals(1)}"
                    android:onClick="@{() -> viewModel.setPlates(1)}"
                    android:text="@string/one_plate" />

                <RadioButton
                    android:id="@+id/twoPlate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.plates.equals(2)}"
                    android:onClick="@{() -> viewModel.setPlates(2)}"
                    android:text="2 Plates"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourPlate"
                    android:checked="@{viewModel.plates.equals(4)}"
                    android:onClick="@{() -> viewModel.setPlates(4)}"
                    android:text="4 Plates"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eightPlate"
                    android:checked="@{viewModel.plates.equals(8)}"
                    android:onClick="@{() -> viewModel.setPlates(8)}"
                    android:text="8 Plates"
                    tools:ignore="HardcodedText" />
            </RadioGroup>

            <view
                class="com.google.android.material.divider.MaterialDivider"
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/platesOption"
                android:layout_marginTop="@dimen/margin_between_elements" />


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="wrap_content"
                android:onClick="@{() -> platesFragment.cancelOrder()}"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> platesFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>